Big update 1.0.1